fix: rolet set in jwt service